Added support for windows ARM to run it on WSL