@@ -13,6 +13,7 @@
         <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.han-yaeger</groupId>
@@ -20,4 +21,64 @@
             <version>2024.2025</version>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>arm</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.google.inject</groupId>
+                    <artifactId>guice</artifactId>
+                    <version>7.0.0</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.6.0</version>
+                        <executions>
+                            <execution>
+                                <id>copy-dependencies</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.11.0</version>
+                        <configuration>
+                            <source>25</source>
+                            <target>25</target>
+                            <compilerArgs>
+                                <arg>--module-path</arg>
+                                <arg>/home/justi/.m2/repository/com/github/han-yaeger/yaeger/2024.2025/yaeger-2024.2025.jar</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.openjfx</groupId>
+                        <artifactId>javafx-maven-plugin</artifactId>
+                        <version>0.0.8</version>
+                        <configuration>
+                            <mainClass>YaegerTutorial/nl.han.jef.YaegerTutorial</mainClass>
+                            <options>
+                                <option>--enable-native-access=javafx.graphics,javafx.media</option>
+                                <option>-Djavafx.media.overridenativelib=true</option>
+                                <option>--add-opens=java.base/sun.misc=ALL-UNNAMED</option>
+                            </options>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
